--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@grapecity/spread-excelio": "^15.1.4",
-    "@grapecity/spread-sheets": "^15.1.4",
-    "@grapecity/spread-sheets-barcode": "^15.1.4",
-    "@grapecity/spread-sheets-charts": "^15.1.4",
-    "@grapecity/spread-sheets-designer": "^15.1.4",
-    "@grapecity/spread-sheets-designer-react": "^15.1.4",
-    "@grapecity/spread-sheets-designer-resources-ko": "^15.1.4",
-    "@grapecity/spread-sheets-languagepackages": "^15.1.4",
-    "@grapecity/spread-sheets-pdf": "^15.1.4",
-    "@grapecity/spread-sheets-pivot-addon": "^15.1.4",
-    "@grapecity/spread-sheets-print": "^15.1.4",
-    "@grapecity/spread-sheets-react": "^15.1.4",
-    "@grapecity/spread-sheets-resources-ko": "^15.1.4",
-    "@grapecity/spread-sheets-shapes": "^15.1.4",
+    "@grapecity/spread-excelio": "15.1.4",
+    "@grapecity/spread-sheets": "15.1.4",
+    "@grapecity/spread-sheets-barcode": "15.1.4",
+    "@grapecity/spread-sheets-charts": "15.1.4",
+    "@grapecity/spread-sheets-designer": "15.1.4",
+    "@grapecity/spread-sheets-designer-react": "15.1.4",
+    "@grapecity/spread-sheets-designer-resources-ko": "15.1.4",
+    "@grapecity/spread-sheets-languagepackages": "15.1.4",
+    "@grapecity/spread-sheets-pdf": "15.1.4",
+    "@grapecity/spread-sheets-pivot-addon": "15.1.4",
+    "@grapecity/spread-sheets-tablesheet": "15.1.4",
+    "@grapecity/spread-sheets-print": "15.1.4",
+    "@grapecity/spread-sheets-react": "15.1.4",
+    "@grapecity/spread-sheets-resources-ko": "15.1.4",
+    "@grapecity/spread-sheets-shapes": "15.1.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
