--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -5,13 +5,12 @@
   "dependencies": {
     "@grapecity/spread-excelio": "16.2.6",
     "@grapecity/spread-sheets": "16.2.6",
-    "@grapecity/spread-sheets-io": "16.2.6",
     "@grapecity/spread-sheets-barcode": "16.2.6",
-    "@grapecity/spread-sheets-slicers": "16.2.6",
     "@grapecity/spread-sheets-charts": "16.2.6",
     "@grapecity/spread-sheets-designer": "16.2.6",
     "@grapecity/spread-sheets-designer-react": "16.2.6",
     "@grapecity/spread-sheets-designer-resources-ko": "16.2.6",
+    "@grapecity/spread-sheets-io": "16.2.6",
     "@grapecity/spread-sheets-languagepackages": "16.2.6",
     "@grapecity/spread-sheets-pdf": "16.2.6",
     "@grapecity/spread-sheets-pivot-addon": "16.2.6",
@@ -19,6 +18,7 @@
     "@grapecity/spread-sheets-react": "16.2.6",
     "@grapecity/spread-sheets-resources-ko": "16.2.6",
     "@grapecity/spread-sheets-shapes": "16.2.6",
+    "@grapecity/spread-sheets-slicers": "16.2.6",
     "@grapecity/spread-sheets-tablesheet": "16.2.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.1.0",
@@ -28,6 +28,7 @@
     "ace-builds": "^1.27.0",
     "axios": "^1.5.0",
     "d3": "^7.8.5",
+    "d3-cloud": "^1.2.7",
     "devextreme": "23.1.4",
     "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
