--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -32,12 +32,16 @@
     "devextreme": "23.1.4",
     "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
+    "docx": "^8.5.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "flexlayout-react": "^0.7.9",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
     "install": "0.13.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
