--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@grapecity/spread-excelio": "16.2.6",
-    "@grapecity/spread-sheets": "16.2.6",
-    "@grapecity/spread-sheets-barcode": "16.2.6",
-    "@grapecity/spread-sheets-charts": "16.2.6",
-    "@grapecity/spread-sheets-designer": "16.2.6",
-    "@grapecity/spread-sheets-designer-react": "16.2.6",
-    "@grapecity/spread-sheets-designer-resources-ko": "16.2.6",
-    "@grapecity/spread-sheets-io": "16.2.6",
-    "@grapecity/spread-sheets-languagepackages": "16.2.6",
-    "@grapecity/spread-sheets-pdf": "16.2.6",
-    "@grapecity/spread-sheets-pivot-addon": "16.2.6",
-    "@grapecity/spread-sheets-print": "16.2.6",
-    "@grapecity/spread-sheets-react": "16.2.6",
-    "@grapecity/spread-sheets-resources-ko": "16.2.6",
-    "@grapecity/spread-sheets-shapes": "16.2.6",
-    "@grapecity/spread-sheets-slicers": "16.2.6",
-    "@grapecity/spread-sheets-tablesheet": "16.2.6",
+    "@grapecity/spread-excelio": "17.1.3",
+    "@grapecity/spread-sheets": "17.1.3",
+    "@grapecity/spread-sheets-barcode": "17.1.3",
+    "@grapecity/spread-sheets-charts": "17.1.3",
+    "@grapecity/spread-sheets-designer": "17.1.3",
+    "@grapecity/spread-sheets-designer-react": "17.1.3",
+    "@grapecity/spread-sheets-designer-resources-ko": "17.1.3",
+    "@grapecity/spread-sheets-io": "17.1.3",
+    "@grapecity/spread-sheets-languagepackages": "17.1.3",
+    "@grapecity/spread-sheets-pdf": "17.1.3",
+    "@grapecity/spread-sheets-pivot-addon": "17.1.3",
+    "@grapecity/spread-sheets-print": "17.1.3",
+    "@grapecity/spread-sheets-react": "17.1.3",
+    "@grapecity/spread-sheets-resources-ko": "17.1.3",
+    "@grapecity/spread-sheets-shapes": "17.1.3",
+    "@grapecity/spread-sheets-slicers": "17.1.3",
+    "@grapecity/spread-sheets-tablesheet": "17.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@szhsin/react-menu": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -41,6 +41,7 @@
     "install": "0.13.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "marketing_wi_faltform_v2": "file:",
     "pptxgenjs": "^3.12.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
