--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@
 
 # oracle
 spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-spring.datasource.username=refactoringtest
+spring.datasource.username=hnswise
 # spring.datasource.username=wisebiv6
-spring.datasource.password=wisebiv61012
+spring.datasource.password=wise1012
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 
