--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # oracle
-spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-spring.datasource.username=refactoringtest
-spring.datasource.password=wisebiv61012
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+# spring.datasource.username=refactoringtest
+# spring.datasource.password=wisebiv61012
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # mssql test
 # spring.datasource.url=jdbc:sqlserver://3.36.35.153:1433;DatabaseName=WISE.BI.V6.DEV
@@ -11,11 +11,11 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # oracle
-# spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
-# spring.datasource.username=hnswise
-# # spring.datasource.username=wisebiv6
-# spring.datasource.password=wise1012
-# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@52.79.199.37:1539:wise
+spring.datasource.username=hnswise
+# spring.datasource.username=wisebiv6
+spring.datasource.password=wise1012
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 
 
