--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
+    "date-fns": "^4.1.0",
     "devextreme": "23.1.4",
     "devextreme-aspnet-data-nojquery": "^3.0.0",
     "devextreme-react": "23.1.4",
@@ -39,6 +40,8 @@
     "framer-motion": "^10.16.4",
     "html2canvas": "^1.4.1",
     "install": "0.13.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "marketing_wi_faltform_v2": "file:",
