--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -50,6 +50,7 @@
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-grid-layout": "^1.3.4",
