--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -62,7 +62,9 @@
     "react-uuid": "^2.0.0",
     "redux": "^4.2.1",
     "redux-mock-store": "^1.5.4",
+    "rrule": "^2.8.1",
     "styled-components": "^6.0.7",
+    "swiper": "^11.1.14",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
