--- a/src/main/view/package.json
+++ b/src/main/view/package.json
@@ -49,6 +49,7 @@
     "react-ace": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-collapsible": "^2.10.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-grid-layout": "^1.3.4",
