--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,9 @@ connection.pool.min = 10
 connection.pool.max = 10
 
 
+# WAS JNDI 연결 목록 
+# OLAP 에 등로되어있는 데이터원본명 작성
+datasource.mstr.dsname = null
+
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
