--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,20 @@
   <name>MarketingPlatForm</name>
   <packaging>war</packaging>
   <description>Demo project for Spring Boot</description>
+
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <log4j2.version>2.20.0</log4j2.version>
     <webapp.lib>${basedir}/lib</webapp.lib>
   </properties>
+
+  <!-- <properties>
+    <java.version>1.8</java.version>
+    <log4j2.version>2.20.0</log4j2.version>
+    <webapp.lib>${basedir}/lib</webapp.lib>
+  </properties> -->
 
   <repositories>
     <repository>
